made SonarQube happier